--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -38,3 +38,11 @@
     border-radius: 4px;
   }
 }
+
+.navigation-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.page-header__item + .page-header__item {
+  margin-left: 50px;
+}
