--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -5,14 +5,11 @@
 }
 
 .page-header__link {
-  display: block;
-  color: var(--primary-text-color);
-  font-size: 14px;
   text-decoration: none;
-
+  font-size: 14px;
+  display: block;
+  color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 32px;
-  padding-bottom: 32px;
 
   &:hover,
   &:focus {
