--- a/sass/components/_section-portfolio.scss
+++ b/sass/components/_section-portfolio.scss
@@ -47,27 +47,39 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
+.section-portfolio__wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  list-style: none;
+}
 .portfolio-wrapper {
   position: relative;
   overflow: hidden;
-  &::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
-    z-index: 0;
-  }
-  .section-portfolio__card:hover &::after,
-  .section-portfolio__link:focus &::after {
-    transform: translateY(-100%);
-    opacity: 1;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--primary-backround-color);
-  }
+}
+.section-portfolio__card:hover .portfolio-wrapper::after,
+.section-portfolio__link:focus .portfolio-wrapper::after {
+  transform: translateY(-100%);
+  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--primary-backround-color);
+}
+
+.portfolio-wrapper::after,
+.portfolio-wrapper::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0%);
+  z-index: 0;
 }
 
 .section-portfolio__card {
