--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -12,10 +12,6 @@
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
-    &.modal {
-      transform: scale(1.1) translate(-50%, -50%);
-      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
   }
 }
 
@@ -152,6 +148,19 @@
   }
 }
 
+.checkbox-label::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  transform: translate(18px, 5px);
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-button {
   width: 200px;
   margin-left: auto;
@@ -170,12 +179,13 @@
   background-color: var(--accent-color);
   font-weight: var(--bold-font-weight);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  //   &:hover,
-  //   &:focus {
-  //     box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
-  //       0px 2px 2px rgb(0 0 0 / 12%);
-  //   }
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .modal-text {
@@ -215,4 +225,14 @@
   border: none;
   margin-top: 8px;
   margin-right: 8px;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(1.1) translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
