--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -17,6 +17,7 @@
   font-size: 16px;
   font-family: inherit;
   letter-spacing: 0.06em;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -55,4 +56,10 @@ body {
   font-family: Roboto, sans-serif;
   color: var(--primary-text-color);
   box-sizing: border-box;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
