--- a/sass/components/_section-portfolio.scss
+++ b/sass/components/_section-portfolio.scss
@@ -58,28 +58,13 @@
   margin-right: auto;
   list-style: none;
 }
-.portfolio-wrapper {
-  position: relative;
-  overflow: hidden;
-}
+
 .section-portfolio__card:hover .portfolio-wrapper::after,
 .section-portfolio__link:focus .portfolio-wrapper::after {
   transform: translateY(-100%);
   opacity: 1;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-backround-color);
-}
-
-.portfolio-wrapper::after,
-.portfolio-wrapper::after {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(0%);
-  z-index: 0;
 }
 
 .section-portfolio__card {
@@ -101,18 +86,21 @@
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     color: var(--accent-color);
   }
-  &:focus .portfolio-text {
-    transform: translateY(-100%);
-    opacity: 1;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--primary-backround-color);
-  }
+}
+.section-portfolio__link:focus .portfolio-text,
+.section-portfolio__card:hover .portfolio-wrapper::after,
+.section-portfolio__card:focus .portfolio-wrapper::after {
+  transform: translateY(-100%);
+  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--primary-backround-color);
 }
 
 .section-portfolio__card:hover .portfolio-text {
@@ -134,6 +122,21 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-wrapper::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0%);
+  z-index: 0;
+}
 .item-container {
   border: 1px solid #eeeeee;
   border-top: 0;
