--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,14 @@
-@import './sass/utils/variables';
-@import './sass/components/hero';
-@import './sass/components/navigation';
-@import './sass/components/page-header';
-@import './sass/components/section-title';
-@import './sass/components/section-third';
-@import './sass/components/section-portfolio';
-@import './sass/components/backdrop';
-@import './sass/components/section-team_social-list';
-@import './sass/components/section-team';
-@import './sass/components/section';
-@import './sass/components/footer';
-@import './sass/components/common';
-@import './sass/utils/placeholders';
+@import 'utils/variables';
+@import 'components/hero';
+@import 'components/navigation';
+@import 'components/page-header';
+@import 'components/section-title';
+@import 'components/section-third';
+@import 'components/section-portfolio';
+@import 'components/backdrop';
+@import 'components/section-team_social-list';
+@import 'components/section-team';
+@import 'components/section';
+@import 'components/footer';
+@import 'components/common';
+@import 'utils/placeholders';
