--- a/css/main.css
+++ b/css/main.css
@@ -383,8 +383,8 @@
   text-decoration: none;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 38px;
-  padding-bottom: 38px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .navigation-link:hover, .navigation-link:focus {
@@ -893,7 +893,7 @@
 .modal-input__font {
   font-size: 14px;
   margin: 0;
-  padding: 0;
+  padding: 12px;
   line-height: var(--text-line-height);
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
