--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -79,7 +79,7 @@
   &__font {
     font-size: 14px;
     margin: 0;
-    padding: 0;
+    padding: 12px;
     line-height: var(--text-line-height);
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
