--- a/css/main.css
+++ b/css/main.css
@@ -1447,6 +1447,15 @@ img {
   height: auto;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+}
+
 .navigation-list, .section-title__list, .section-third__list, .social-list, .section-team__list, .section__list, .footer-list, h1,
 h2,
 h3,
