--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,7 @@
 .page-header__icon {
   margin-right: 10px;
   vertical-align: middle;
+  fill: var(--secondary-text-color);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
