--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -31,6 +31,7 @@
 .page-header__icon {
   margin-right: 10px;
   vertical-align: middle;
+  fill: var(--secondary-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
